--- a/src/blocks/row/styles/style.scss
+++ b/src/blocks/row/styles/style.scss
@@ -8,11 +8,11 @@
 .wp-block-coblocks-row[data-columns="1"] {
 	.wp-block-coblocks-column__inner{
 		> [class*="wp-block-"]{
-			max-width: calc(6 * (100vw / 12) - 28px);
+			max-width: calc( 6 * (100vw / 12.5) );
     		margin-left: auto;
     		margin-right: auto;
     		&.alignwide{
-    			max-width: calc(6 * (100vw / 8) - 28px);
+    			max-width: calc( 6 * (100vw / 8.5) );
     		}
     		&.alignfull{
     			max-width: 100%;
@@ -27,7 +27,7 @@
 			}
 		}
 		> :not([class*="wp-block-"]){
-			max-width: calc(6 * (100vw / 12) - 28px);
+			max-width: calc( 6 * (100vw / 12) );
     		margin-left: auto;
     		margin-right: auto;
 		}
